fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body {
   line-height: 1.6;
   background-color: var(--light);
   color: var(--dark);
+  overflow-x: hidden;
 }
 
 h1 {
@@ -441,7 +442,7 @@ fieldset {
 
 /* client styling */
 #client-hero {
-  min-height: 500px;
+  min-height: 300px;
   background-image: url("../images/client-bg.png");
   background-size: cover;
   background-position: center top;
@@ -461,7 +462,7 @@ fieldset {
 
 /* team styling */
 #team-hero {
-  min-height: 500px;
+  min-height: 200px;
   background-image: url("../images/team-bg.png");
   background-size: cover;
   background-position: center center;
@@ -669,6 +670,11 @@ fieldset {
   .sm-text-right {
     text-align: right;
   }
+
+  #team-hero,
+  #client-hero {
+    min-height: 400px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -801,6 +807,10 @@ fieldset {
     max-width: 70px;
   }
 
+  #team-hero,
+  #client-hero {
+    min-height: 500px;
+  }
   .footer-logo {
     max-width: 80px;
   }
